force-app/main/default/objects/maps__LiveDriver__c/maps__LiveDriver__c.object-meta.xml
<CustomObject>
    <label>Maps Live Driver</label>
    <nameField>
        <label>Maps Live Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>