force-app/main/default/objects/maps__LiveDriver__c/fields/maps__FirstName__c.field-meta.xml
<CustomField>
    <fullName>maps__FirstName__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>