force-app/main/default/objects/maps__LiveDriver__c/fields/maps__HomeCity__c.field-meta.xml
<CustomField>
    <fullName>maps__HomeCity__c</fullName>
    <label>Home City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>