force-app/main/default/objects/maps__LiveDriver__c/fields/maps__HomeCountry__c.field-meta.xml
<CustomField>
    <fullName>maps__HomeCountry__c</fullName>
    <label>Home Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>