force-app/main/default/objects/maps__LiveDriver__c/fields/maps__HomeFullAddress__c.field-meta.xml
<CustomField>
    <fullName>maps__HomeFullAddress__c</fullName>
    <label>Home Full Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>