force-app/main/default/objects/maps__LiveDriver__c/fields/maps__HomePostalCode__c.field-meta.xml
<CustomField>
    <fullName>maps__HomePostalCode__c</fullName>
    <label>Home Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>