force-app/main/default/objects/maps__LiveDriver__c/fields/maps__HomeState__c.field-meta.xml
<CustomField>
    <fullName>maps__HomeState__c</fullName>
    <label>Home State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>