force-app/main/default/objects/maps__LiveDriver__c/fields/maps__HomeStreetAddress__c.field-meta.xml
<CustomField>
    <fullName>maps__HomeStreetAddress__c</fullName>
    <label>Home Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>