force-app/main/default/objects/maps__LiveDriver__c/fields/maps__LastName__c.field-meta.xml
<CustomField>
    <fullName>maps__LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>