force-app/main/default/objects/maps__LiveDriver__c/fields/maps__LiveWorkingHours__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveWorkingHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Driver&apos;s specific working hours</description>
    <inlineHelpText>Lookup to the Driver&apos;s specific working hours</inlineHelpText>
    <label>Live Working Hours</label>
    <referenceTo>maps__LiveWorkingHours__c</referenceTo>
    <relationshipLabel>Live Drivers</relationshipLabel>
    <relationshipName>LiveDrivers</relationshipName>
    <type>Lookup</type>
</CustomField>