force-app/main/default/objects/maps__LiveDriver__c/fields/maps__Location__c.field-meta.xml
<CustomField>
    <fullName>maps__Location__c</fullName>
    <description>Lat/Long values for this driver&apos;s home address</description>
    <inlineHelpText>Lat/Long values for this driver&apos;s home address</inlineHelpText>
    <label>Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>