force-app/main/default/objects/maps__LiveDriver__c/fields/maps__ReceiveDeviceDisconnectAlerts__c.field-meta.xml
<CustomField>
    <fullName>maps__ReceiveDeviceDisconnectAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if driver should receive Device Disconnect Alerts</description>
    <inlineHelpText>Indicate if driver should receive Device Disconnect Alerts</inlineHelpText>
    <label>Receive Device Disconnect Alerts?</label>
    <type>Checkbox</type>
</CustomField>